# task

company/: db.sqlite3  manage.py  pyproject.toml
company/company/: settings.py  urls.py
company/myapp/: admin.py  forms.py  models.py  urls.py  views.py
company/myapp/migrations/: 0001_initial.py
company/myapp/templates/: AddDep.html  AddEmp.html  Dep.html  base.html  employeeList.html  showDep.html
