[tool.poetry]
name = "company"
version = "0.1.0"
description = ""
authors = ["oqla alrefai <realrefai.rr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
